feat: Adiciona suporte para citar mensagens em envios de texto, mídia, áudio e arquivo
